--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
 
     <nav class="navbar-info">
-      <div class="container">
+      <div class="container navbar-info__container">
         <div class="logo">
           <a class="logo__link" href="">
             <img class="logo__image" src="assets/img/logo.svg" alt="logo">
