--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
     </nav>
   </header>
 
+  <main class="main">
+    <section class="hero">
+      <div class="container">
+        <div class="hero__content">
+          <h1 class="hero__title">Супер кресло</h1>
+          <div class="hero__description">Текст акции всегда отражает суть, а не просто
+            болтовню, поэтому внимательнее
+          </div>
+          <div class="hero__actions">
+            <a class="hero__buttons btn btn--secondary" href="">Подробнее</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
 </body>
 
 </html>
