--- a/index.html
+++ b/index.html
@@ -3,97 +3,96 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Document</title>
-  <link rel="stylesheet" href="assets/css/normalize.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
 
-  <header class="header">
-    <nav class="navbar-secondary">
-      <div class="container">
-        <ul class="navbar-secondary__list">
-          <li class="navbar-secondary__item">
-            <a class="navbar-secondary__link" href="">Доставка</a>
-          </li>
-          <li class="navbar-secondary__item">
-            <a class="navbar-secondary__link" href="">Оплата</a>
-          </li>
-          <li class="navbar-secondary__item">
-            <a class="navbar-secondary__link" href="">Отзывы</a>
-          </li>
-          <li class="navbar-secondary__item">
-            <a class="navbar-secondary__link" href="">Вопрос - ответ</a>
-          </li>
-          <li class="navbar-secondary__item">
-            <a class="navbar-secondary__link" href="">Контакты</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+<header class="header">
+  <nav class="navbar-secondary">
+    <div class="container">
+      <ul class="navbar-secondary__list">
+        <li class="navbar-secondary__item">
+          <a class="navbar-secondary__link" href="">Доставка</a>
+        </li>
+        <li class="navbar-secondary__item">
+          <a class="navbar-secondary__link" href="">Оплата</a>
+        </li>
+        <li class="navbar-secondary__item">
+          <a class="navbar-secondary__link" href="">Отзывы</a>
+        </li>
+        <li class="navbar-secondary__item">
+          <a class="navbar-secondary__link" href="">Вопрос - ответ</a>
+        </li>
+        <li class="navbar-secondary__item">
+          <a class="navbar-secondary__link" href="">Контакты</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-    <nav class="navbar-info">
-      <div class="container navbar-info__container">
-        <div class="logo">
-          <a class="logo__link" href="">
-            <img class="logo__image" src="assets/img/logo.svg" alt="logo">
-          </a>
+  <nav class="navbar-info">
+    <div class="container navbar-info__container">
+      <div class="logo">
+        <a class="logo__link" href="">
+          <img alt="logo" class="logo__image" src="assets/img/logo.svg">
+        </a>
+      </div>
+
+      <div class="feedback">
+        <a class="feedback__phone" href="tel:+88121234567">8 (812) 123-45-67</a>
+        <button class="feedback__button btn btn--primary">Обратный звонок</button>
+      </div>
+    </div>
+  </nav>
+
+  <nav class="navbar-primary">
+    <div class="container">
+      <ul class="navbar-primary__list">
+        <li class="navbar-primary__item">
+          <a class="navbar-primary__link" href="">Парикмахерская</a>
+        </li>
+        <li class="navbar-primary__item">
+          <a class="navbar-primary__link" href="">Барбершоп</a>
+        </li>
+        <li class="navbar-primary__item">
+          <a class="navbar-primary__link" href="">Маникюр</a>
+        </li>
+        <li class="navbar-primary__item">
+          <a class="navbar-primary__link" href="">Педикюр</a>
+        </li>
+        <li class="navbar-primary__item">
+          <a class="navbar-primary__link" href="">Массаж</a>
+        </li>
+        <li class="navbar-primary__item">
+          <a class="navbar-primary__link" href="">Мебель</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
+<main class="main">
+  <section class="hero">
+    <div class="container">
+      <div class="hero__content">
+        <h1 class="hero__title">Супер кресло</h1>
+        <div class="hero__description">Текст акции всегда отражает суть, а не просто
+          болтовню, поэтому внимательнее
         </div>
-
-        <div class="feedback">
-          <a class="feedback__phone" href="tel:+88121234567">8 (812) 123-45-67</a>
-          <button class="feedback__button btn btn--primary">Обратный звонок</button>
+        <div class="hero__actions">
+          <a class="hero__buttons btn btn--secondary" href="">Подробнее</a>
         </div>
       </div>
-    </nav>
-
-    <nav class="navbar-primary">
-      <div class="container">
-        <ul class="navbar-primary__list">
-          <li class="navbar-primary__item">
-            <a class="navbar-primary__link" href="">Парикмахерская</a>
-          </li>
-          <li class="navbar-primary__item">
-            <a class="navbar-primary__link" href="">Барбершоп</a>
-          </li>
-          <li class="navbar-primary__item">
-            <a class="navbar-primary__link" href="">Маникюр</a>
-          </li>
-          <li class="navbar-primary__item">
-            <a class="navbar-primary__link" href="">Педикюр</a>
-          </li>
-          <li class="navbar-primary__item">
-            <a class="navbar-primary__link" href="">Массаж</a>
-          </li>
-          <li class="navbar-primary__item">
-            <a class="navbar-primary__link" href="">Мебель</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-  <main class="main">
-    <section class="hero">
-      <div class="container">
-        <div class="hero__content">
-          <h1 class="hero__title">Супер кресло</h1>
-          <div class="hero__description">Текст акции всегда отражает суть, а не просто
-            болтовню, поэтому внимательнее
-          </div>
-          <div class="hero__actions">
-            <a class="hero__buttons btn btn--secondary" href="">Подробнее</a>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
+    </div>
+  </section>
+</main>
 
 </body>
 
