закончил работу в классе

--- a/index.html
+++ b/index.html
@@ -92,6 +92,77 @@
       </div>
     </div>
   </section>
+
+  <section class="offers">
+    <div class="container">
+      <h2 class="offers__title">Специальные предложения</h2>
+      <div class="offers__content">
+        <article class="offer-item">
+          <h3 class="offer-item__title">Парикмахерское кресло «Норм» гидравлическое</h3>
+          <div class="offer-item__picture">
+            <img alt="Item" class="offer-item__image" src="assets/img/offer.png">
+          </div>
+          <div class="offer-item__price">9 900 UAH</div>
+          <div class="offer-item__action">
+            <a class="offer-item__button btn btn--sm" href="">Купить</a>
+          </div>
+        </article>
+        <article class="offer-item">
+          <h3 class="offer-item__title">Парикмахерское кресло «Норм» гидравлическое</h3>
+          <div class="offer-item__picture">
+            <img alt="Item" class="offer-item__image" src="assets/img/offer.png">
+          </div>
+          <div class="offer-item__price">9 900 UAH</div>
+          <div class="offer-item__action">
+            <a class="offer-item__button btn btn--sm" href="">Купить</a>
+          </div>
+        </article>
+        <article class="offer-item">
+          <h3 class="offer-item__title">Парикмахерское кресло «Норм» гидравлическое</h3>
+          <div class="offer-item__picture">
+            <img alt="Item" class="offer-item__image" src="assets/img/offer.png">
+          </div>
+          <div class="offer-item__price">9 900 UAH</div>
+          <div class="offer-item__action">
+            <a class="offer-item__button btn btn--sm" href="">Купить</a>
+          </div>
+        </article>
+        <article class="offer-item">
+          <h3 class="offer-item__title">Парикмахерское кресло «Норм» гидравлическое</h3>
+          <div class="offer-item__picture">
+            <img alt="Item" class="offer-item__image" src="assets/img/offer.png">
+          </div>
+          <div class="offer-item__price">9 900 UAH</div>
+          <div class="offer-item__action">
+            <a class="offer-item__button btn btn--sm" href="">Купить</a>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <section class="submit">
+    <div class="container submit__container">
+      <h2 class="submit__title">Title about this section</h2>
+      <div class="subscribe">
+        <h3 class="subscribe__title">Получайте бонусы и подарки</h3>
+        <div class="subscribe__description">Каждый месяц разыгрываем 10 000 рублей для наших клиентов</div>
+        <form action="submit" class="subscribe__form" method="get">
+          <input class="subscribe__input" placeholder="Введите e-mail" type="email">
+        </form>
+      </div>
+      <div class="location">
+        <h3 class="location__title">Заходите к нам</h3>
+        <div class="location__description">Более 300 магазинов по всей России</div>
+        <div class="location__actions">
+          <a class="location__button btn" href="">Карта магазинов</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <br><br><br><br><br><br><br><br><br><br>
+
 </main>
 
 </body>
